<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E8ADAA"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MapsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/closeBPBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#F62217"
            android:onClick="dismissBrokerView"
            android:text="@string/x"
            android:textAlignment="center"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textBroker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closeBPBtn"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:text="@string/broker_path"
            android:textAllCaps="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closeBPBtn"
            android:layout_marginBottom="0dp"
            android:saveEnabled="true"
            android:layout_toEndOf="@+id/textBroker"
            android:layout_toRightOf="@+id/textBroker">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/brokerInput"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closeBPBtn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/textBroker"
            android:layout_toRightOf="@+id/textBroker"
            android:saveEnabled="true" />

        <Button
            android:id="@+id/saveBrokerBtn"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_below="@+id/brokerInput"
            android:layout_centerHorizontal="true"
            android:background="#76BA1B"
            android:layout_marginTop="30dp"
            android:onClick="saveBrokerPath"
            android:text="@string/save_and_connect"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:visibility="visible" />

    </RelativeLayout>

</ScrollView>