<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E8ADAA"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MapsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/closeTBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#F62217"
            android:onClick="dismissTopicView"
            android:text="@string/x"
            android:textAlignment="center"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/closeTBtn"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/topic"
            android:textAllCaps="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:layout_toEndOf="@+id/textTopic"
            android:layout_toRightOf="@+id/textTopic"
            android:layout_marginBottom="0dp"
            android:layout_below="@+id/closeTBtn">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topicInput"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:layout_below="@+id/closeTBtn"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_toRightOf="@+id/textTopic"
            android:layout_toEndOf="@+id/textTopic" />

        <Button
            android:id="@+id/saveTopicBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTopic"
            android:layout_centerHorizontal="true"
            android:background="#76BA1B"
            android:layout_marginTop="30dp"
            android:onClick="saveTopic"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:visibility="visible" />

    </RelativeLayout>

</ScrollView>